# PrzetwarzanieWspolbierzne-PK

./: .gitignore
labs/1/lab1/: Makefile  moj_program  moj_program.c
labs/10/src/: Ssend_case_data.csv  basic_buffored_data.csv  basic_case_data.csv  bsend  pack  pack_case_data.csv  prog  prog.c  prog_Bsend.c  prog_Ssend.c  prog_pack.c  przyklad  przyklad.c  ssend
labs/12/src/: prog  prog.c
labs/2/: CMakeLists.txt  Laboratorium2.doc  clone.c  fork.c  prog.c
labs/3/pub_zad2/: a  pub.c
labs/3/zad1/: a  zad1.c
labs/4/: a  prog.cpp
labs/5/src/: .editorconfig  a  prog.c  prog_zad_3.c  prog_zad_4.c  prog_zad_5.c  zad3  zad4  zad5
labs/6/: CMakeLists.txt
labs/6/include/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp
labs/6/src/: main.cpp
labs/7/: CMakeLists.txt
labs/7/include/matrix/: Matrix.cpp  Matrix.hpp
labs/7/src/: fib.cpp  main.cpp
labs/8 JAVA_labs/java_1/: JAROSLAW_KOLODZIEJ_LAB_8.7z
labs/8 JAVA_labs/java_1/src/main/java/: Main.java  Zad1.java  Zad2.java  Zad3.java
labs/8 JAVA_labs/java_lab_2/src/main/java/: Main.java
labs/9/src/: prog  program.cpp  prz  przyklad.cpp
labs/JAVA_labs/java_1/: pom.xml
labs/JAVA_labs/java_1/src/main/java/: Main.java  Zad1.java  Zad2.java  Zad3.java
labs/JAVA_labs/java_lab_2/: pom.xml
